--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
                         primeCount++;
                     }
                 }
-                const resultContainer = document.createElement('div');
-                resultContainer.textContent = `Number of prime numbers between 2 and ${num}: ${primeCount}`;
-                document.body.appendChild(resultContainer);
+                window.document.title = `Number of prime numbers between 2 and ${num}: ${primeCount}`;
+
 
             } else {
                 console.error('Error: Invalid value for N');
