--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                         primeCount++;
                     }
                 }
-                window.document.title = `Number of prime numbers between 2 and ${num}: ${primeCount}`;
-
+                alert(`Number of prime numbers between 2 and ${num}: ${primeCount}`);
 
             } else {
                 console.error('Error: Invalid value for N');
